# gearbox-zed

./: .gitignore  .rules  Cargo.toml  README.md  package-lock.json  package.json
.omo/: boulder.json  ralph-loop.local.md
.omo/drafts/: gear-omo-alignment.md
.omo/plans/: gear-omo-alignment.md
.omo/run-continuation/: ses_0b861a13dffeDLcLjjUkGxg1lg.json  ses_0b861ded4ffeGqOFiPm9t8OEiV.json  ses_0b8620ae0ffepgbFcr3Qk4XZU8.json  ses_0b86233c5ffeAUwivaERO9ubMW.json  ses_0b86339ceffeA1NNdS89kgib0H.json  ses_0b869ba88ffe9db4PYUbwJ5cyO.json  ses_0bb0fc4e2ffemdVd7VGLYaL41n.json  ses_0bb10430cffeyJw4cFEGVC0lVi.json  ses_0bb106cc2ffeGl6c65Mz3rhrgo.json  ses_0bb232813ffeZO8AtKMLnsdAKN.json
crates/agent/: Cargo.toml
crates/gearbox/: AGENTS.md  build.rs
crates/gearbox_agent/: AGENTS.md  Cargo.toml
crates/gearbox_agent/graphify-out/cache/: stat-index.json
crates/gearbox_agent/src/: cli.rs  gearbox_agent.rs  gui.rs  languages.rs  main.rs  open_code_phase_runtime.rs  phase_routing.rs  plan_graph.rs  plan_review.rs  product.rs  runtime.rs  state.rs  task_manager.rs  test_support.rs  tools.rs  worker_broker.rs  workers.rs
crates/gearbox_settings/: GEARBOX_BUG_SCAN_2026-07-08_DIFF_REVIEW.md  GEARBOX_DETAILED_BUGS.md  GEARBOX_DIFF_REVIEW_2026-07-08T16-50-48_GOAL_UNKNOWN_STATE.md  GEARBOX_FIX_PLAN.md  GEARBOX_L10N_AUDIT.md  UPSTREAM_SYNC_NOTES.md
docs/: gearbox-diff-review-2026-07-09.md  gearbox-gear-agent-plan.md  gearbox-gear-remaining-gap-dogfood-plan.md  gearbox-omo-next-execution-plan.md  gearbox-omo-reference.md
docs/arch/: gearbox-diff-review-2026-07-09.md  (+12 more)
(+114 files in other folders)
