[package]
name = "gearbox_agent"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/gearbox_agent.rs"

[[bin]]
name = "gear"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap = { workspace = true, features = ["derive"] }
serde.workspace = true
serde_json.workspace = true
smol.workspace = true

[dev-dependencies]
tempfile.workspace = true
